# 38_5_3_Blur_Effect_Qt

./: CMakeLists.txt  window.cpp  window.h  window.ui
